--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox intro</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h2>Flexbox container</h2>
-    
+    <div class="container" dir="ltr">
+        <section class="box1">Box1</section>
+        <section class="box2">Box2</section>
+        <section class="box3">Box3</section>
+        <section class="box4">Box4</section>
+    </div>
 
     <!-- <h2>Flexbox items</h2> -->
 </body>
