--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <h2>Flexbox container</h2>
-    <div class="container" dir="ltr">
+    <div class="container flexbox-container" dir="ltr">
         <section class="box1">Box1</section>
         <section class="box2">Box2</section>
         <section class="box3">Box3</section>
         <section class="box4">Box4</section>
     </div>
 
-    <!-- <h2>Flexbox items</h2> -->
+    <h2>Flexbox items</h2>
+    <div class="container flexbox-items" dir="ltr">
+        <section class="box5">Box5</section>
+        <section class="box6">Box6</section>
+        <section class="box7">Box7</section>
+        <section class="box8">Box8</section>
+    </div>
 </body>
 </html>
