--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>Flexbox container</h2>
+    <h2>Flexbox container..</h2>
     <div class="container flexbox-container" dir="ltr">
         <section class="box1">Box1</section>
         <section class="box2">Box2</section>
@@ -16,7 +16,7 @@
         <section class="box4">Box4</section>
     </div>
 
-    <h2>Flexbox items</h2>
+    <h2>Flexbox items..</h2>
     <div class="container flexbox-items" dir="ltr">
         <section class="box5">Box5</section>
         <section class="box6">Box6</section>
